public/css/profile.css
.profile-wrapper {
  display: flex;
  flex-flow: column;
  gap: 1.5vmax;
  padding: 1vmax;
}

.income-statement,
.balance-sheet {
  height: 30%;
}

.income-container,
.balance-container {
  display: flex;
  justify-content: space-between;
  width: 100%;
  padding-top: 0.5vmax;
}

.income,
.expenses,
.assets,
.liabilities {
  width: 45%;
}

.income-wrapper,
.expenses-wrapper,
.assets-wrapper,
.liabilities-wrapper {
  height: 14vmax;
  overflow-y: scroll;
  padding: 0.5vmax;
}

.expansion-window-screen header {
  display: flex;
  justify-content: space-between;
  padding: 0vmax 1vmax;
  font-weight: 600;
}

header>h3 {
  font-weight: 600;
}

.salary-wrapper,
.savings-wrapper,
.my-details,
.total-income-wrapper,
.total-expenses-wrapper {
  display: flex;
  gap: 1vmax;
}

.my-details .icon {
  width: 2.3em;
}

.profile-wrapper table {
  font-size: var(--small-font);
  padding-bottom: 0.5vmax;
  width: 15vmax;
}

.profile-wrapper main h3 {
  padding: 0.5vmax;
  background-color: black;
  color: white;
}

.profile-wrapper table th {
  text-align: left;
  font-weight: 400;
  padding-right: 1vmax;
}

.total-income-wrapper,
.total-expenses-wrapper {
  padding-top: 0.5vmax;
  font-weight: 600;
}

.profile-wrapper table tbody th,
.profile-wrapper table tbody td {
  border-bottom: var(--def-border);
  padding-top: 0.5vmax;
}

.profile-wrapper table tbody td {
  text-align: right;
}

.profile-wrapper table thead th {
  text-align: left;
  font-weight: 600;
}

